Script call fixed